--- a/index.html
+++ b/index.html
@@ -470,6 +470,46 @@ header{
 <script type="module">
 (async function(){
   if(document.readyState === 'loading') await new Promise(r=>document.addEventListener('DOMContentLoaded', r));
+// ================= PRODUCT DETAIL OPEN =================
+document.addEventListener('click', e => {
+  const card = e.target.closest('.card');
+  if (!card) return;
+
+  const imgWrap = card.querySelector('.imgwrap');
+  if (!imgWrap) return;
+
+  currentProductId = card.dataset.pid;
+
+  $('pdTitle').innerText = card.querySelector('h3')?.innerText || '';
+  $('pdPrice').innerText = card.querySelector('.price')?.innerText || '';
+
+  const images = JSON.parse(imgWrap.dataset.images || '[]');
+  const thumbs = $('pdThumbs');
+  thumbs.innerHTML = '';
+
+  if (images.length) {
+    $('pdMainImg').src = images[0];
+
+    images.forEach((src, i) => {
+      const t = document.createElement('img');
+      t.src = src;
+      if (i === 0) t.classList.add('active');
+
+      t.onclick = () => {
+        thumbs.querySelectorAll('img').forEach(x => x.classList.remove('active'));
+        t.classList.add('active');
+        $('pdMainImg').src = src;
+      };
+      thumbs.appendChild(t);
+    });
+  }
+
+  openModal($('productDetailModal'));
+  $('closeProductDetail').addEventListener('click', () => {
+  closeModal($('productDetailModal'));
+});
+
+});
 
   // ---- CONFIG ----
   const ADMIN_UID = 'EenXHJIvZpavhkGTCI8EZyFAfH93'; // UI-only sentinel; enforce admin in Firestore rules / backend
@@ -980,56 +1020,6 @@ window.location.href = 'payment.html';});
     </div>
   </div>
 
-<script>
-let currentProductId = null;
-let selectedRating = 0;
-
-document.addEventListener('click', e=>{
-  const card = e.target.closest('.card');
-  if(!card) return;
-
-  const img = card.querySelector('.imgwrap img');
-  if(!img) return;
-
-  const pid = card.dataset.pid;
-  if(!pid) return;
-
-  currentProductId = pid;
-
-  const title = card.querySelector('h3').innerText;
-  const price = card.querySelector('.price').innerText;
-
-  document.getElementById('pdTitle').innerText = title;
-  document.getElementById('pdPrice').innerText = price;
-
-  const imgWrap = card.querySelector('.imgwrap');
-const images = JSON.parse(imgWrap.dataset.images || '[]');
-
-const thumbs = document.getElementById('pdThumbs');
-thumbs.innerHTML = '';
-
-if (images.length) {
-  document.getElementById('pdMainImg').src = images[0];
-
-  images.forEach((src, idx) => {
-    const t = document.createElement('img');
-    t.src = src;
-    if (idx === 0) t.classList.add('active');
-
-    t.onclick = () => {
-      document.querySelectorAll('.pd-thumbs img').forEach(x => x.classList.remove('active'));
-      t.classList.add('active');
-      document.getElementById('pdMainImg').src = src;
-    };
-    thumbs.appendChild(t);
-  });
-}
-
-document.getElementById('closeProductDetail').onclick=()=>{
-  document.getElementById('productDetailModal').classList.remove('show');
-  document.body.style.overflow='';
-};
-</script>
 
   <!-- Product Detail Modal -->
 <div class="modal" id="productDetailModal" aria-hidden="true">
