--- a/index.html
+++ b/index.html
@@ -475,7 +475,18 @@ let selectedRating = 0;
 // ================= PRODUCT DETAIL OPEN =================
 document.addEventListener('click', e => {
   const card = e.target.closest('.card');
-  if (!card) return;
+  if (!card || !card.dataset.pid) return;
+
+
+  const imgWrap = card.querySelector('.imgwrap');
+  if (!imgWrap) return;
+
+  currentProductId = card.dataset.pid;
+const $ = id => document.getElementById(id);
+  // ================= PRODUCT DETAIL OPEN =================
+document.addEventListener('click', e => {
+  const card = e.target.closest('.card');
+  if (!card || !card.dataset.pid) return;
 
   const imgWrap = card.querySelector('.imgwrap');
   if (!imgWrap) return;
@@ -502,17 +513,45 @@ document.addEventListener('click', e => {
         t.classList.add('active');
         $('pdMainImg').src = src;
       };
+
       thumbs.appendChild(t);
     });
   }
 
-  
+  openModal($('productDetailModal'));
+});
+$('closeProductDetail')?.addEventListener('click', () => {
+  closeModal($('productDetailModal'));
 });
 
-});
-openModal($('productDetailModal'));
-  $('closeProductDetail').addEventListener('click', () => {
-  closeModal($('productDetailModal'));
+  $('pdTitle').innerText = card.querySelector('h3')?.innerText || '';
+  $('pdPrice').innerText = card.querySelector('.price')?.innerText || '';
+
+  const images = JSON.parse(imgWrap.dataset.images || '[]');
+  const thumbs = $('pdThumbs');
+  thumbs.innerHTML = '';
+
+  if (images.length) {
+    $('pdMainImg').src = images[0];
+
+    images.forEach((src, i) => {
+      const t = document.createElement('img');
+      t.src = src;
+      if (i === 0) t.classList.add('active');
+
+      t.onclick = () => {
+        thumbs.querySelectorAll('img').forEach(x => x.classList.remove('active'));
+        t.classList.add('active');
+        $('pdMainImg').src = src;
+      };
+      thumbs.appendChild(t);
+    });
+    openModal($('productDetailModal'));
+
+  }
+
+  
+
   // ---- CONFIG ----
   const ADMIN_UID = 'EenXHJIvZpavhkGTCI8EZyFAfH93'; // UI-only sentinel; enforce admin in Firestore rules / backend
   const firebaseConfig = {
@@ -546,7 +585,7 @@ openModal($('productDetailModal'));
     const googleProvider = new GoogleAuthProvider();
 
     // ---- DOM refs ----
-    const $ = id => document.getElementById(id);
+    
     const loginModal = $('loginModal'), orderModal = $('orderModal'), adminModal = $('adminModal');
     const loginErr = $('loginErr'), userBadge = $('userBadge'), signOutBtn = $('signOutBtn'), loginShowBtn = $('loginShowBtn'), googleBtnLarge = $('googleBtnLarge');
     const myOrdersBtn = $('myOrdersBtn');
