--- a/index.html
+++ b/index.html
@@ -621,6 +621,52 @@ $('submitReview')?.addEventListener('click', async () => {
 
     // ---- PRODUCTS: load from Firestore (live) ----
     const productGrid = $('productGrid');
+    // ================= PRODUCT CARD CLICK → DETAIL MODAL =================
+productGrid.addEventListener('click', e => {
+  const card = e.target.closest('.card');
+  if (!card) return;
+  if (!card.dataset.pid) return;
+
+  // If Order button clicked, ignore (already handled elsewhere)
+  if (e.target.closest('.orderBtn')) return;
+
+  currentProductId = card.dataset.pid;
+
+  // Load images
+  const imgWrap = card.querySelector('.imgwrap');
+  const images = JSON.parse(imgWrap?.dataset.images || '[]');
+
+  if (images.length) {
+    $('pdMainImg').src = images[0];
+    const thumbs = $('pdThumbs');
+    thumbs.innerHTML = '';
+
+    images.forEach((src, i) => {
+      const t = document.createElement('img');
+      t.src = src;
+      if (i === 0) t.classList.add('active');
+
+      t.onclick = () => {
+        thumbs.querySelectorAll('img').forEach(x => x.classList.remove('active'));
+        t.classList.add('active');
+        $('pdMainImg').src = src;
+      };
+
+      thumbs.appendChild(t);
+    });
+  }
+
+  // Title & price
+  $('pdTitle').innerText = card.querySelector('h3')?.innerText || '';
+  $('pdPrice').innerText = card.querySelector('.price')?.innerText || '';
+
+  // Load reviews
+  loadProductReviews(currentProductId);
+
+  // OPEN MODAL
+  openModal(document.getElementById('productDetailModal'));
+});
+
     const productsColRef = collection(db, 'products');
 
     function renderProductCard(docSnap){
