--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 <style>
 :root{
   /* BACKGROUND */
-  --bg1:#070b14;
-  --bg2:#0b1426;
+  --bg1:#060a13;
+  --bg2:#0a1324;
 
   /* SURFACES */
-  --card:#0e1b2f;
-  --glass:rgba(255,255,255,0.06);
+  --card:#0f1e36;
+  --glass:rgba(255,255,255,0.08);
 
   /* BRAND */
   --accent:#e6b566;     /* silk gold */
+  --accent-soft:#f4ddb0;
   --accent2:#7aa2ff;    /* royal indigo */
 
-  --text:#eef3ff;
-  --muted:#9fb0c8;
+  --text:#f2f6ff;
+  --muted:#a3b2cc;
 
   --success:#3ddc97;
   --danger:#ff5c5c;
@@ -35,29 +36,29 @@ html,body{
   margin:0;
   font-family:Inter,system-ui,Arial,sans-serif;
   background:
-    radial-gradient(1200px 600px at 20% -10%, rgba(122,162,255,.15), transparent 60%),
+    radial-gradient(900px 500px at 15% -10%, rgba(122,162,255,.18), transparent 60%),
+    radial-gradient(700px 400px at 85% 10%, rgba(230,181,102,.15), transparent 55%),
     linear-gradient(180deg,var(--bg1),var(--bg2));
   color:var(--text);
 }
 
 .container{
-  max-width:1200px;
-  margin:28px auto;
-  padding:0 18px;
+  max-width:1280px;
+  margin:30px auto;
+  padding:0 20px;
 }
 
 /* ================= HEADER ================= */
 header{
   display:flex;
-  gap:18px;
+  gap:20px;
   align-items:center;
   justify-content:space-between;
-  padding:18px 20px;
-  border-radius:22px;
-  background:
-    linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.02));
-  backdrop-filter: blur(14px);
-  box-shadow:0 20px 60px rgba(0,0,0,.35);
+  padding:18px 22px;
+  border-radius:26px;
+  background:linear-gradient(180deg,rgba(255,255,255,.08),rgba(255,255,255,.03));
+  backdrop-filter: blur(18px);
+  box-shadow:0 25px 80px rgba(0,0,0,.45);
 }
 
 .brand{
@@ -67,22 +68,22 @@ header{
 }
 
 .logo{
-  width:52px;
-  height:52px;
-  border-radius:16px;
-  background:
-    linear-gradient(135deg,var(--accent),#f3d48c);
+  width:54px;
+  height:54px;
+  border-radius:18px;
+  background:linear-gradient(135deg,var(--accent),var(--accent-soft));
   display:flex;
   align-items:center;
   justify-content:center;
   font-weight:900;
+  font-size:20px;
   color:#3b2b08;
+  box-shadow:0 10px 30px rgba(230,181,102,.4);
 }
 
 .title{
   font-weight:800;
-  font-size:18px;
-  letter-spacing:.2px;
+  font-size:19px;
 }
 
 .small{
@@ -93,14 +94,20 @@ header{
 /* ================= SEARCH ================= */
 .search{
   flex:1;
-  max-width:460px;
+  max-width:480px;
   display:flex;
   align-items:center;
   gap:10px;
-  padding:12px 16px;
-  border-radius:18px;
-  background:rgba(255,255,255,.07);
-  border:1px solid rgba(255,255,255,.12);
+  padding:13px 18px;
+  border-radius:20px;
+  background:rgba(255,255,255,.08);
+  border:1px solid rgba(255,255,255,.14);
+  transition:.25s ease;
+}
+
+.search:focus-within{
+  border-color:var(--accent);
+  box-shadow:0 0 0 3px rgba(230,181,102,.18);
 }
 
 .search input{
@@ -115,83 +122,97 @@ header{
 /* ================= BUTTONS ================= */
 .btn{
   border:none;
-  padding:12px 20px;
-  border-radius:18px;
+  padding:13px 22px;
+  border-radius:20px;
   font-weight:800;
   cursor:pointer;
-  background:
-    linear-gradient(90deg,var(--accent),#f3d48c);
+  background:linear-gradient(90deg,var(--accent),var(--accent-soft));
   color:#3b2b08;
-  box-shadow:0 10px 30px rgba(230,181,102,.35);
+  box-shadow:0 12px 35px rgba(230,181,102,.4);
+  transition:.25s ease;
+}
+
+.btn:hover{
+  transform:translateY(-2px);
+  box-shadow:0 18px 45px rgba(230,181,102,.55);
 }
 
 .btn-ghost{
-  background:transparent;
+  background:rgba(255,255,255,.04);
   border:1px solid rgba(255,255,255,.18);
-  padding:11px 18px;
-  border-radius:18px;
+  padding:12px 20px;
+  border-radius:20px;
   color:var(--text);
   cursor:pointer;
+  transition:.25s ease;
+}
+
+.btn-ghost:hover{
+  background:rgba(255,255,255,.08);
 }
 
 /* ================= HERO ================= */
 .hero{
   display:grid;
-  grid-template-columns:1.4fr .6fr;
-  gap:22px;
-  margin-top:26px;
+  grid-template-columns:1.35fr .65fr;
+  gap:24px;
+  margin-top:30px;
 }
 
 .hero-card{
-  padding:36px;
-  border-radius:28px;
-  background:
-    linear-gradient(180deg,#12233e,#0a162a);
-  box-shadow:0 30px 80px rgba(0,0,0,.45);
+  padding:42px;
+  border-radius:32px;
+  background:linear-gradient(180deg,#152b4e,#0b182f);
+  box-shadow:0 35px 90px rgba(0,0,0,.55);
 }
 
 .hero-card h1{
-  font-size:34px;
-  margin:0 0 14px 0;
-  line-height:1.2;
+  font-size:36px;
+  margin:0 0 16px;
+  line-height:1.15;
+}
+
+.hero-card p{
+  color:var(--muted);
+  max-width:520px;
 }
 
 .promo{
-  border-radius:28px;
-  padding:26px;
-  background:
-    linear-gradient(180deg,rgba(230,181,102,.25),rgba(122,162,255,.08));
-  border:1px solid rgba(230,181,102,.4);
+  border-radius:32px;
+  padding:30px;
+  background:linear-gradient(180deg,rgba(230,181,102,.28),rgba(122,162,255,.12));
+  border:1px solid rgba(230,181,102,.45);
   text-align:center;
-  box-shadow:0 20px 60px rgba(0,0,0,.35);
+  box-shadow:0 25px 70px rgba(0,0,0,.45);
 }
 
 /* ================= PRODUCT GRID ================= */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(230px,1fr));
-  gap:22px;
-  margin-top:26px;
+  grid-template-columns:repeat(auto-fill,minmax(240px,1fr));
+  gap:24px;
+  margin-top:32px;
 }
 
 .card{
-  background:
-    linear-gradient(180deg,#132644,#0b182d);
-  border-radius:26px;
-  padding-bottom:16px;
-  transition:.35s ease;
-  box-shadow:0 18px 50px rgba(0,0,0,.45);
+  background:linear-gradient(180deg,#162e52,#0c1b33);
+  border-radius:30px;
+  padding-bottom:18px;
+  transition:.35s cubic-bezier(.2,.8,.2,1);
+  box-shadow:0 22px 60px rgba(0,0,0,.55);
+  cursor:pointer;
 }
 
 .card:hover{
-  transform:translateY(-10px);
+  transform:translateY(-12px);
+  box-shadow:0 30px 80px rgba(0,0,0,.7);
 }
 
 /* IMAGE */
 .imgwrap{
   position:relative;
-  padding-bottom:125%;
-  border-radius:26px 26px 0 0;
+  padding-bottom:130%;
+  border-radius:30px 30px 0 0;
   overflow:hidden;
 }
 
@@ -201,40 +222,42 @@ header{
   width:100%;
   height:100%;
   object-fit:cover;
-  transition:transform .5s ease;
+  transition:transform .6s ease;
 }
 
 .card:hover .imgwrap img{
-  transform:scale(1.06);
+  transform:scale(1.08);
 }
 
 /* TAG */
 .tag{
   position:absolute;
-  top:14px;
-  left:14px;
-  padding:6px 14px;
+  top:16px;
+  left:16px;
+  padding:7px 16px;
   font-size:12px;
   border-radius:999px;
-  background:
-    linear-gradient(90deg,var(--accent),#f3d48c);
+  background:linear-gradient(90deg,var(--accent),var(--accent-soft));
   color:#3b2b08;
-  font-weight:800;
+  font-weight:900;
+  box-shadow:0 6px 20px rgba(230,181,102,.4);
 }
 
 /* PRODUCT TEXT */
 .card h3{
-  margin:16px;
+  margin:18px 18px 6px;
   font-size:16px;
   font-weight:700;
 }
 
 .price{
+  margin:0 18px;
   font-weight:900;
   color:var(--accent);
 }
 
 .product-rating{
+  margin:6px 18px 0;
   font-size:13px;
   color:var(--success);
 }
@@ -246,7 +269,7 @@ header{
   display:none;
   align-items:center;
   justify-content:center;
-  background:rgba(3,6,12,.85);
+  background:rgba(4,7,14,.88);
   z-index:2000;
 }
 
@@ -254,92 +277,20 @@ header{
 
 .modal-box{
   width:100%;
-  max-width:760px;
+  max-width:820px;
   max-height:90vh;
   overflow:auto;
-  background:
-    linear-gradient(180deg,#132644,#0b182d);
-  border-radius:28px;
-  padding:28px;
-  box-shadow:0 40px 120px rgba(0,0,0,.6);
-}
-
-/* ================= PRODUCT DETAIL ================= */
-.product-detail-box{
-  max-width:960px;
-}
-
-.pd-layout{
-  display:grid;
-  grid-template-columns:1.05fr .95fr;
-  gap:28px;
-}
-
-.pd-main-img{
-  width:100%;
-  border-radius:22px;
-  aspect-ratio:3/4;
-  object-fit:cover;
-  box-shadow:0 20px 60px rgba(0,0,0,.5);
-}
-
-.pd-thumbs img{
-  width:64px;
-  height:86px;
-  border-radius:14px;
-  cursor:pointer;
-  opacity:.6;
-  border:2px solid transparent;
-}
-
-.pd-thumbs img.active{
-  opacity:1;
-  border-color:var(--accent);
-}
-
-.review-stars span{
-  font-size:24px;
-  cursor:pointer;
-  color:#666;
-}
-
-.review-stars span.active{
-  color:var(--accent);
+  background:linear-gradient(180deg,#162e52,#0c1b33);
+  border-radius:32px;
+  padding:32px;
+  box-shadow:0 45px 140px rgba(0,0,0,.75);
 }
 
 /* ================= MOBILE ================= */
 @media(max-width:768px){
-  header{
-    flex-direction:column;
-    align-items:stretch;
-  }
-  .hero{
-    grid-template-columns:1fr;
-  }
-  .pd-layout{
-    grid-template-columns:1fr;
-  }
+  header{flex-direction:column}
+  .hero{grid-template-columns:1fr}
 }
-  .reviews-list{
-  display:flex;
-  flex-direction:column;
-  gap:12px;
-  margin-top:10px;
-}
-.review-item{
-  padding:10px;
-  border-radius:12px;
-  background:rgba(255,255,255,0.05);
-}
-.review-item .stars{
-  color:var(--accent);
-  font-weight:700;
-}
-.review-item .text{
-  margin-top:4px;
-  color:var(--muted);
-}
-
 </style>
 
 </head>
