--- a/index.html
+++ b/index.html
@@ -8,77 +8,86 @@
   
 
 <style>
+/* =========================================================
+   CORE DESIGN TOKENS (ACCESSIBILITY TUNED)
+   ========================================================= */
 :root{
-  /* BACKGROUND */
-  --bg1:#060a13;
-  --bg2:#0a1324;
+  --bg1:#05080f;
+  --bg2:#0a1426;
 
-  /* SURFACES */
-  --card:#0f1e36;
-  --glass:rgba(255,255,255,0.08);
+  --surface:#0f1d35;
+  --surface-soft:#162b50;
 
-  /* BRAND */
-  --accent:#e6b566;     /* silk gold */
-  --accent-soft:#f4ddb0;
-  --accent2:#7aa2ff;    /* royal indigo */
+  --gold:#e6b566;
+  --gold-soft:#f3ddb0;
 
-  --text:#f2f6ff;
-  --muted:#a3b2cc;
+  --text:#f5f7ff;
+  --muted:#b3bfd8;
 
   --success:#3ddc97;
-  --danger:#ff5c5c;
+  --danger:#ff6b6b;
+
+  --focus:rgba(230,181,102,.45);
 }
 
 *{box-sizing:border-box}
 
 html,body{
-  height:100%;
   margin:0;
+  height:100%;
   font-family:Inter,system-ui,Arial,sans-serif;
+  color:var(--text);
   background:
     radial-gradient(900px 500px at 15% -10%, rgba(122,162,255,.18), transparent 60%),
     radial-gradient(700px 400px at 85% 10%, rgba(230,181,102,.15), transparent 55%),
     linear-gradient(180deg,var(--bg1),var(--bg2));
-  color:var(--text);
+  animation:pageIn .6s ease both;
+}
+
+@keyframes pageIn{
+  from{opacity:0; transform:translateY(8px)}
+  to{opacity:1; transform:none}
 }
 
 .container{
   max-width:1280px;
-  margin:30px auto;
+  margin:28px auto;
   padding:0 20px;
 }
 
-/* ================= HEADER ================= */
+/* =========================================================
+   HEADER
+   ========================================================= */
 header{
   display:flex;
-  gap:20px;
   align-items:center;
   justify-content:space-between;
+  gap:20px;
   padding:18px 22px;
   border-radius:26px;
-  background:linear-gradient(180deg,rgba(255,255,255,.08),rgba(255,255,255,.03));
-  backdrop-filter: blur(18px);
+  background:linear-gradient(180deg,rgba(255,255,255,.09),rgba(255,255,255,.03));
+  backdrop-filter:blur(18px);
   box-shadow:0 25px 80px rgba(0,0,0,.45);
 }
 
 .brand{
   display:flex;
-  gap:14px;
   align-items:center;
+  gap:14px;
 }
 
 .logo{
   width:54px;
   height:54px;
   border-radius:18px;
-  background:linear-gradient(135deg,var(--accent),var(--accent-soft));
   display:flex;
   align-items:center;
   justify-content:center;
   font-weight:900;
   font-size:20px;
   color:#3b2b08;
-  box-shadow:0 10px 30px rgba(230,181,102,.4);
+  background:linear-gradient(135deg,var(--gold),var(--gold-soft));
+  box-shadow:0 10px 30px rgba(230,181,102,.45);
 }
 
 .title{
@@ -91,7 +100,9 @@ header{
   color:var(--muted);
 }
 
-/* ================= SEARCH ================= */
+/* =========================================================
+   SEARCH
+   ========================================================= */
 .search{
   flex:1;
   max-width:480px;
@@ -106,8 +117,8 @@ header{
 }
 
 .search:focus-within{
-  border-color:var(--accent);
-  box-shadow:0 0 0 3px rgba(230,181,102,.18);
+  border-color:var(--gold);
+  box-shadow:0 0 0 3px rgba(230,181,102,.2);
 }
 
 .search input{
@@ -119,100 +130,111 @@ header{
   font-size:14px;
 }
 
-/* ================= BUTTONS ================= */
+/* =========================================================
+   BUTTONS
+   ========================================================= */
+button{
+  font-family:inherit;
+}
+
 .btn{
+  padding:13px 24px;
   border:none;
-  padding:13px 22px;
-  border-radius:20px;
+  border-radius:999px;
   font-weight:800;
   cursor:pointer;
-  background:linear-gradient(90deg,var(--accent),var(--accent-soft));
+  background:linear-gradient(90deg,var(--gold),var(--gold-soft));
   color:#3b2b08;
-  box-shadow:0 12px 35px rgba(230,181,102,.4);
+  box-shadow:0 14px 35px rgba(230,181,102,.45);
   transition:.25s ease;
 }
 
 .btn:hover{
   transform:translateY(-2px);
-  box-shadow:0 18px 45px rgba(230,181,102,.55);
+  box-shadow:0 20px 50px rgba(230,181,102,.6);
 }
 
 .btn-ghost{
-  background:rgba(255,255,255,.04);
+  padding:12px 22px;
+  border-radius:999px;
   border:1px solid rgba(255,255,255,.18);
-  padding:12px 20px;
-  border-radius:20px;
+  background:rgba(255,255,255,.04);
   color:var(--text);
   cursor:pointer;
   transition:.25s ease;
 }
 
 .btn-ghost:hover{
-  background:rgba(255,255,255,.08);
+  background:rgba(255,255,255,.1);
 }
 
-/* ================= HERO ================= */
+/* =========================================================
+   HERO
+   ========================================================= */
 .hero{
   display:grid;
   grid-template-columns:1.35fr .65fr;
-  gap:24px;
+  gap:26px;
   margin-top:30px;
 }
 
 .hero-card{
-  padding:42px;
-  border-radius:32px;
-  background:linear-gradient(180deg,#152b4e,#0b182f);
-  box-shadow:0 35px 90px rgba(0,0,0,.55);
+  padding:44px;
+  border-radius:34px;
+  background:linear-gradient(180deg,#18305a,#0c1b33);
+  box-shadow:0 35px 95px rgba(0,0,0,.6);
 }
 
 .hero-card h1{
-  font-size:36px;
   margin:0 0 16px;
+  font-size:36px;
   line-height:1.15;
 }
 
 .hero-card p{
+  max-width:540px;
   color:var(--muted);
-  max-width:520px;
 }
 
 .promo{
-  border-radius:32px;
-  padding:30px;
-  background:linear-gradient(180deg,rgba(230,181,102,.28),rgba(122,162,255,.12));
-  border:1px solid rgba(230,181,102,.45);
+  padding:32px;
+  border-radius:34px;
   text-align:center;
-  box-shadow:0 25px 70px rgba(0,0,0,.45);
+  background:linear-gradient(180deg,rgba(230,181,102,.3),rgba(122,162,255,.12));
+  border:1px solid rgba(230,181,102,.45);
+  box-shadow:0 28px 75px rgba(0,0,0,.5);
 }
 
-/* ================= PRODUCT GRID ================= */
+/* =========================================================
+   PRODUCT GRID
+   ========================================================= */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(240px,1fr));
-  gap:24px;
-  margin-top:32px;
+  gap:26px;
+  margin-top:34px;
 }
 
+/* CARD */
 .card{
-  background:linear-gradient(180deg,#162e52,#0c1b33);
-  border-radius:30px;
-  padding-bottom:18px;
-  transition:.35s cubic-bezier(.2,.8,.2,1);
-  box-shadow:0 22px 60px rgba(0,0,0,.55);
+  position:relative;
+  background:linear-gradient(180deg,var(--surface-soft),var(--surface));
+  border-radius:28px;
+  overflow:hidden;
   cursor:pointer;
+  box-shadow:0 22px 60px rgba(0,0,0,.6);
+  transition:transform .35s ease, box-shadow .35s ease;
 }
 
 .card:hover{
   transform:translateY(-12px);
-  box-shadow:0 30px 80px rgba(0,0,0,.7);
+  box-shadow:0 34px 90px rgba(0,0,0,.75);
 }
 
 /* IMAGE */
 .imgwrap{
   position:relative;
-  padding-bottom:130%;
-  border-radius:30px 30px 0 0;
+  aspect-ratio:3/4;
   overflow:hidden;
 }
 
@@ -225,8 +247,27 @@ header{
   transition:transform .6s ease;
 }
 
-.card:hover .imgwrap img{
+.card:hover img{
   transform:scale(1.08);
+}
+
+/* SKELETON */
+.skeleton{
+  position:absolute;
+  inset:0;
+  background:linear-gradient(
+    90deg,
+    #1a2946 25%,
+    #243e6d 37%,
+    #1a2946 63%
+  );
+  background-size:400% 100%;
+  animation:skeleton 1.4s ease infinite;
+}
+
+@keyframes skeleton{
+  0%{background-position:100% 0}
+  100%{background-position:0 0}
 }
 
 /* TAG */
@@ -235,15 +276,31 @@ header{
   top:16px;
   left:16px;
   padding:7px 16px;
-  font-size:12px;
   border-radius:999px;
-  background:linear-gradient(90deg,var(--accent),var(--accent-soft));
-  color:#3b2b08;
+  font-size:12px;
   font-weight:900;
-  box-shadow:0 6px 20px rgba(230,181,102,.4);
+  background:linear-gradient(90deg,var(--gold),var(--gold-soft));
+  color:#3b2b08;
+  box-shadow:0 6px 22px rgba(230,181,102,.45);
 }
 
-/* PRODUCT TEXT */
+/* QUICK VIEW */
+.quick-view{
+  position:absolute;
+  inset:0;
+  display:flex;
+  align-items:flex-end;
+  justify-content:center;
+  background:linear-gradient(180deg,transparent 50%,rgba(5,8,15,.88));
+  opacity:0;
+  transition:.35s ease;
+}
+
+.card:hover .quick-view{
+  opacity:1;
+}
+
+/* TEXT */
 .card h3{
   margin:18px 18px 6px;
   font-size:16px;
@@ -253,40 +310,65 @@ header{
 .price{
   margin:0 18px;
   font-weight:900;
-  color:var(--accent);
+  color:var(--gold);
 }
 
 .product-rating{
-  margin:6px 18px 0;
+  margin:6px 18px 16px;
   font-size:13px;
   color:var(--success);
 }
 
-/* ================= MODALS ================= */
+/* =========================================================
+   MODAL
+   ========================================================= */
 .modal{
   position:fixed;
   inset:0;
-  display:none;
+  display:flex;
   align-items:center;
   justify-content:center;
   background:rgba(4,7,14,.88);
+  opacity:0;
+  pointer-events:none;
+  transition:.35s ease;
   z-index:2000;
 }
 
-.modal.show{display:flex}
-
-.modal-box{
-  width:100%;
-  max-width:820px;
-  max-height:90vh;
-  overflow:auto;
-  background:linear-gradient(180deg,#162e52,#0c1b33);
-  border-radius:32px;
-  padding:32px;
-  box-shadow:0 45px 140px rgba(0,0,0,.75);
+.modal.show{
+  opacity:1;
+  pointer-events:auto;
 }
 
-/* ================= MOBILE ================= */
+.modal-box{
+  max-width:900px;
+  width:100%;
+  max-height:90vh;
+  overflow:auto;
+  padding:34px;
+  border-radius:34px;
+  background:linear-gradient(180deg,#18305a,#0c1b33);
+  box-shadow:0 45px 140px rgba(0,0,0,.8);
+  transform:scale(.96) translateY(14px);
+  transition:.35s ease;
+}
+
+.modal.show .modal-box{
+  transform:scale(1) translateY(0);
+}
+
+/* =========================================================
+   ACCESSIBILITY
+   ========================================================= */
+button:focus-visible,
+input:focus-visible{
+  outline:none;
+  box-shadow:0 0 0 3px var(--focus);
+}
+
+/* =========================================================
+   MOBILE
+   ========================================================= */
 @media(max-width:768px){
   header{flex-direction:column}
   .hero{grid-template-columns:1fr}
