--- a/index.html
+++ b/index.html
@@ -8,91 +8,73 @@
   
 
 <style>
-/* =========================================================
-   CORE DESIGN TOKENS (ACCESSIBILITY TUNED)
-   ========================================================= */
+/* ================= ROOT ================= */
 :root{
-  --bg1:#05080f;
-  --bg2:#0a1426;
+  --bg:#0b1020;
+  --panel:#121a2f;
+  --panel-soft:#162140;
+  --line:rgba(255,255,255,0.08);
 
-  --surface:#0f1d35;
-  --surface-soft:#162b50;
+  --primary:#e6b566;
+  --primary-dark:#cfa34e;
 
-  --gold:#e6b566;
-  --gold-soft:#f3ddb0;
-
-  --text:#f5f7ff;
-  --muted:#b3bfd8;
+  --text:#eef2ff;
+  --muted:#9fb0d1;
 
   --success:#3ddc97;
   --danger:#ff6b6b;
-
-  --focus:rgba(230,181,102,.45);
 }
 
 *{box-sizing:border-box}
 
 html,body{
   margin:0;
-  height:100%;
+  padding:0;
   font-family:Inter,system-ui,Arial,sans-serif;
+  background:linear-gradient(180deg,#080c18,#0b1020);
   color:var(--text);
-  background:
-    radial-gradient(900px 500px at 15% -10%, rgba(122,162,255,.18), transparent 60%),
-    radial-gradient(700px 400px at 85% 10%, rgba(230,181,102,.15), transparent 55%),
-    linear-gradient(180deg,var(--bg1),var(--bg2));
-  animation:pageIn .6s ease both;
 }
 
-@keyframes pageIn{
-  from{opacity:0; transform:translateY(8px)}
-  to{opacity:1; transform:none}
-}
-
+/* ================= LAYOUT ================= */
 .container{
-  max-width:1280px;
-  margin:28px auto;
-  padding:0 20px;
+  max-width:1200px;
+  margin:24px auto;
+  padding:0 16px;
 }
 
-/* =========================================================
-   HEADER
-   ========================================================= */
+/* ================= HEADER ================= */
 header{
   display:flex;
   align-items:center;
-  justify-content:space-between;
-  gap:20px;
-  padding:18px 22px;
-  border-radius:26px;
-  background:linear-gradient(180deg,rgba(255,255,255,.09),rgba(255,255,255,.03));
-  backdrop-filter:blur(18px);
-  box-shadow:0 25px 80px rgba(0,0,0,.45);
+  gap:18px;
+  padding:14px 16px;
+  border-radius:14px;
+  background:var(--panel);
+  border:1px solid var(--line);
 }
 
 .brand{
   display:flex;
+  gap:12px;
   align-items:center;
-  gap:14px;
 }
 
 .logo{
-  width:54px;
-  height:54px;
-  border-radius:18px;
+  width:44px;
+  height:44px;
+  border-radius:10px;
+  background:var(--primary);
+  color:#3b2b08;
+  font-weight:900;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-weight:900;
-  font-size:20px;
-  color:#3b2b08;
-  background:linear-gradient(135deg,var(--gold),var(--gold-soft));
-  box-shadow:0 10px 30px rgba(230,181,102,.45);
 }
 
 .title{
   font-weight:800;
-  font-size:19px;
+  font-size:16px;
+  line-height:1.2;
 }
 
 .small{
@@ -100,25 +82,17 @@ header{
   color:var(--muted);
 }
 
-/* =========================================================
-   SEARCH
-   ========================================================= */
+/* ================= SEARCH ================= */
 .search{
-  flex:1;
-  max-width:480px;
   display:flex;
   align-items:center;
-  gap:10px;
-  padding:13px 18px;
-  border-radius:20px;
-  background:rgba(255,255,255,.08);
-  border:1px solid rgba(255,255,255,.14);
-  transition:.25s ease;
-}
-
-.search:focus-within{
-  border-color:var(--gold);
-  box-shadow:0 0 0 3px rgba(230,181,102,.2);
+  gap:8px;
+  background:#0f1730;
+  border:1px solid var(--line);
+  padding:8px 12px;
+  border-radius:10px;
+  max-width:420px;
+  width:100%;
 }
 
 .search input{
@@ -127,251 +101,249 @@ header{
   border:none;
   outline:none;
   color:var(--text);
-  font-size:14px;
 }
 
-/* =========================================================
-   BUTTONS
-   ========================================================= */
-button{
+/* ================= BUTTONS ================= */
+button,a{
   font-family:inherit;
 }
 
 .btn{
-  padding:13px 24px;
-  border:none;
-  border-radius:999px;
-  font-weight:800;
-  cursor:pointer;
-  background:linear-gradient(90deg,var(--gold),var(--gold-soft));
+  background:var(--primary);
   color:#3b2b08;
-  box-shadow:0 14px 35px rgba(230,181,102,.45);
-  transition:.25s ease;
+  border:none;
+  padding:10px 16px;
+  border-radius:10px;
+  font-weight:700;
+  cursor:pointer;
 }
 
-.btn:hover{
-  transform:translateY(-2px);
-  box-shadow:0 20px 50px rgba(230,181,102,.6);
-}
+.btn:hover{ background:var(--primary-dark); }
 
 .btn-ghost{
-  padding:12px 22px;
-  border-radius:999px;
-  border:1px solid rgba(255,255,255,.18);
-  background:rgba(255,255,255,.04);
+  background:#0f1730;
+  border:1px solid var(--line);
   color:var(--text);
+  padding:9px 14px;
+  border-radius:10px;
   cursor:pointer;
-  transition:.25s ease;
 }
 
 .btn-ghost:hover{
-  background:rgba(255,255,255,.1);
+  background:#17214a;
 }
 
-/* =========================================================
-   HERO
-   ========================================================= */
+/* ================= HERO ================= */
 .hero{
   display:grid;
-  grid-template-columns:1.35fr .65fr;
-  gap:26px;
-  margin-top:30px;
+  grid-template-columns:1.3fr .7fr;
+  gap:16px;
+  margin-top:18px;
 }
 
-.hero-card{
-  padding:44px;
-  border-radius:34px;
-  background:linear-gradient(180deg,#18305a,#0c1b33);
-  box-shadow:0 35px 95px rgba(0,0,0,.6);
+.hero-card,
+.promo{
+  background:var(--panel);
+  border:1px solid var(--line);
+  border-radius:14px;
+  padding:20px;
 }
 
 .hero-card h1{
-  margin:0 0 16px;
-  font-size:36px;
-  line-height:1.15;
-}
-
-.hero-card p{
-  max-width:540px;
-  color:var(--muted);
+  margin:0 0 10px;
+  font-size:28px;
 }
 
 .promo{
-  padding:32px;
-  border-radius:34px;
   text-align:center;
-  background:linear-gradient(180deg,rgba(230,181,102,.3),rgba(122,162,255,.12));
-  border:1px solid rgba(230,181,102,.45);
-  box-shadow:0 28px 75px rgba(0,0,0,.5);
 }
 
-/* =========================================================
-   PRODUCT GRID
-   ========================================================= */
+/* ================= PRODUCT GRID ================= */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(240px,1fr));
-  gap:26px;
-  margin-top:34px;
+  grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
+  gap:16px;
+  margin-top:16px;
 }
 
-/* CARD */
+/* ================= PRODUCT CARD ================= */
 .card{
-  position:relative;
-  background:linear-gradient(180deg,var(--surface-soft),var(--surface));
-  border-radius:28px;
-  overflow:hidden;
+  background:var(--panel-soft);
+  border:1px solid var(--line);
+  border-radius:14px;
+  padding:10px;
   cursor:pointer;
-  box-shadow:0 22px 60px rgba(0,0,0,.6);
-  transition:transform .35s ease, box-shadow .35s ease;
+  transition:transform .2s ease;
 }
 
 .card:hover{
-  transform:translateY(-12px);
-  box-shadow:0 34px 90px rgba(0,0,0,.75);
+  transform:translateY(-4px);
 }
 
 /* IMAGE */
 .imgwrap{
-  position:relative;
+  width:100%;
   aspect-ratio:3/4;
+  border-radius:10px;
   overflow:hidden;
+  background:#0a0f20;
 }
 
 .imgwrap img{
-  position:absolute;
-  inset:0;
   width:100%;
   height:100%;
   object-fit:cover;
-  transition:transform .6s ease;
-}
-
-.card:hover img{
-  transform:scale(1.08);
-}
-
-/* SKELETON */
-.skeleton{
-  position:absolute;
-  inset:0;
-  background:linear-gradient(
-    90deg,
-    #1a2946 25%,
-    #243e6d 37%,
-    #1a2946 63%
-  );
-  background-size:400% 100%;
-  animation:skeleton 1.4s ease infinite;
-}
-
-@keyframes skeleton{
-  0%{background-position:100% 0}
-  100%{background-position:0 0}
 }
 
 /* TAG */
 .tag{
   position:absolute;
-  top:16px;
-  left:16px;
-  padding:7px 16px;
-  border-radius:999px;
-  font-size:12px;
-  font-weight:900;
-  background:linear-gradient(90deg,var(--gold),var(--gold-soft));
+  margin:8px;
+  padding:4px 10px;
+  background:var(--primary);
   color:#3b2b08;
-  box-shadow:0 6px 22px rgba(230,181,102,.45);
-}
-
-/* QUICK VIEW */
-.quick-view{
-  position:absolute;
-  inset:0;
-  display:flex;
-  align-items:flex-end;
-  justify-content:center;
-  background:linear-gradient(180deg,transparent 50%,rgba(5,8,15,.88));
-  opacity:0;
-  transition:.35s ease;
-}
-
-.card:hover .quick-view{
-  opacity:1;
+  font-size:12px;
+  font-weight:700;
+  border-radius:999px;
 }
 
 /* TEXT */
 .card h3{
-  margin:18px 18px 6px;
-  font-size:16px;
-  font-weight:700;
+  margin:10px 0 4px;
+  font-size:15px;
 }
 
 .price{
-  margin:0 18px;
-  font-weight:900;
-  color:var(--gold);
+  font-weight:800;
+  color:var(--primary);
 }
 
 .product-rating{
-  margin:6px 18px 16px;
   font-size:13px;
   color:var(--success);
 }
 
-/* =========================================================
-   MODAL
-   ========================================================= */
+/* ================= MODALS ================= */
 .modal{
   position:fixed;
   inset:0;
-  display:flex;
+  background:rgba(5,8,15,.85);
+  display:none;
   align-items:center;
   justify-content:center;
-  background:rgba(4,7,14,.88);
-  opacity:0;
-  pointer-events:none;
-  transition:.35s ease;
-  z-index:2000;
+  z-index:1000;
 }
 
-.modal.show{
-  opacity:1;
-  pointer-events:auto;
-}
+.modal.show{display:flex}
 
 .modal-box{
+  background:var(--panel);
+  border:1px solid var(--line);
+  border-radius:14px;
+  padding:20px;
   max-width:900px;
   width:100%;
   max-height:90vh;
   overflow:auto;
-  padding:34px;
-  border-radius:34px;
-  background:linear-gradient(180deg,#18305a,#0c1b33);
-  box-shadow:0 45px 140px rgba(0,0,0,.8);
-  transform:scale(.96) translateY(14px);
-  transition:.35s ease;
 }
 
-.modal.show .modal-box{
-  transform:scale(1) translateY(0);
+/* CLOSE BUTTON */
+.close-x{
+  float:right;
+  background:none;
+  border:none;
+  color:var(--muted);
+  font-size:18px;
+  cursor:pointer;
 }
 
-/* =========================================================
-   ACCESSIBILITY
-   ========================================================= */
-button:focus-visible,
-input:focus-visible{
-  outline:none;
-  box-shadow:0 0 0 3px var(--focus);
+/* ================= PRODUCT DETAIL ================= */
+.product-detail-box{ max-width:1000px; }
+
+.pd-layout{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:18px;
 }
 
-/* =========================================================
-   MOBILE
-   ========================================================= */
+.pd-main-img{
+  width:100%;
+  border-radius:12px;
+}
+
+.pd-thumbs{
+  display:flex;
+  gap:8px;
+  margin-top:8px;
+}
+
+.pd-thumbs img{
+  width:60px;
+  height:80px;
+  object-fit:cover;
+  border-radius:8px;
+  opacity:.6;
+  cursor:pointer;
+}
+
+.pd-thumbs img.active{
+  opacity:1;
+  outline:2px solid var(--primary);
+}
+
+.pd-price{
+  font-size:20px;
+  font-weight:800;
+  color:var(--primary);
+}
+
+/* ================= REVIEWS ================= */
+.review-stars span{
+  font-size:22px;
+  cursor:pointer;
+  color:#555;
+}
+
+.review-stars span.active{
+  color:var(--primary);
+}
+
+.reviews-list{
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+  margin-top:10px;
+}
+
+.review-item{
+  background:#0f1730;
+  border:1px solid var(--line);
+  border-radius:10px;
+  padding:10px;
+}
+
+/* ================= ADMIN ================= */
+.field input,
+.field textarea{
+  width:100%;
+  background:#0f1730;
+  border:1px solid var(--line);
+  border-radius:10px;
+  padding:10px;
+  color:var(--text);
+}
+
+/* ================= FOOTER ================= */
+footer{
+  margin-top:24px;
+  color:var(--muted);
+}
+
+/* ================= MOBILE ================= */
 @media(max-width:768px){
   header{flex-direction:column}
   .hero{grid-template-columns:1fr}
+  .pd-layout{grid-template-columns:1fr}
 }
 </style>
 
