--- a/index.html
+++ b/index.html
@@ -345,6 +345,36 @@ footer{
   .hero{grid-template-columns:1fr}
   .pd-layout{grid-template-columns:1fr}
 }
+  /* ===== PRICE WITH MRP + SELL PRICE ===== */
+
+.price-wrap{
+  display:flex;
+  align-items:baseline;
+  gap:8px;
+}
+
+.price-old{
+  font-size:13px;
+  color:var(--muted);
+  text-decoration:line-through;
+}
+
+.price-new{
+  font-size:17px;
+  font-weight:900;
+  color:var(--primary);
+}
+
+.discount-badge{
+  margin-left:auto;
+  font-size:12px;
+  font-weight:700;
+  color:#0b1020;
+  background:#7ee0b2;
+  padding:3px 8px;
+  border-radius:999px;
+}
+
 </style>
 
 </head>
@@ -803,7 +833,29 @@ imgWrap.appendChild(imgEl);
       const h3 = document.createElement('h3'); h3.textContent = title; card.appendChild(h3);
 
       const row = document.createElement('div'); row.style.display = 'flex'; row.style.justifyContent = 'space-between'; row.style.alignItems = 'center';
-      const priceEl = document.createElement('div'); priceEl.className = 'price'; priceEl.textContent = `₹${price}`;
+      const priceWrap = document.createElement('div');
+priceWrap.className = 'price-wrap';
+
+const oldPrice = document.createElement('span');
+oldPrice.className = 'price-old';
+oldPrice.textContent = `₹${Math.round(price * 1.25)}`; // example MRP
+
+const newPrice = document.createElement('span');
+newPrice.className = 'price-new';
+newPrice.textContent = `₹${price}`;
+
+priceWrap.appendChild(oldPrice);
+priceWrap.appendChild(newPrice);
+
+// OPTIONAL discount badge
+const discount = Math.round((1 - price / (price * 1.25)) * 100);
+const badge = document.createElement('span');
+badge.className = 'discount-badge';
+badge.textContent = `${discount}% OFF`;
+priceWrap.appendChild(badge);
+
+row.appendChild(priceWrap);
+
       const ratingWrap = document.createElement('div'); ratingWrap.style.display='flex'; ratingWrap.style.alignItems='center';
       const rEl = document.createElement('div'); rEl.className = 'product-rating small'; rEl.dataset.pid = id; rEl.textContent = avgDisplay;
       ratingWrap.appendChild(rEl);
