--- a/index.html
+++ b/index.html
@@ -781,7 +781,9 @@ productGrid.addEventListener('click', e => {
 
   // Title & price
   $('pdTitle').innerText = card.querySelector('h3')?.innerText || '';
-  $('pdPrice').innerText = card.querySelector('.price')?.innerText || '';
+  $('pdPrice').innerText =
+  card.querySelector('.price-new')?.innerText || '';
+
 
   // Load reviews
   loadProductReviews(currentProductId);
@@ -838,7 +840,9 @@ priceWrap.className = 'price-wrap';
 
 const oldPrice = document.createElement('span');
 oldPrice.className = 'price-old';
-oldPrice.textContent = `₹${Math.round(price * 1.25)}`; // example MRP
+const mrp = data.mrp || price;
+oldPrice.textContent = `₹${mrp}`;
+
 
 const newPrice = document.createElement('span');
 newPrice.className = 'price-new';
@@ -848,18 +852,26 @@ priceWrap.appendChild(oldPrice);
 priceWrap.appendChild(newPrice);
 
 // OPTIONAL discount badge
-const discount = Math.round((1 - price / (price * 1.25)) * 100);
+let discount = 0;
+if (mrp > price) {
+  discount = Math.round(((mrp - price) / mrp) * 100);
+}
+if (discount > 0) {
+  badge.textContent = `${discount}% OFF`;
+  priceWrap.appendChild(badge);
+}
+
 const badge = document.createElement('span');
 badge.className = 'discount-badge';
 badge.textContent = `${discount}% OFF`;
 priceWrap.appendChild(badge);
 
 row.appendChild(priceWrap);
-
+row.appendChild(ratingWrap);
       const ratingWrap = document.createElement('div'); ratingWrap.style.display='flex'; ratingWrap.style.alignItems='center';
       const rEl = document.createElement('div'); rEl.className = 'product-rating small'; rEl.dataset.pid = id; rEl.textContent = avgDisplay;
       ratingWrap.appendChild(rEl);
-      row.appendChild(priceEl); row.appendChild(ratingWrap);
+       
       card.appendChild(row);
 
       const ratingUI = document.createElement('div'); ratingUI.className = 'rating-ui'; ratingUI.style.marginTop='8px';
