--- a/index.html
+++ b/index.html
@@ -1055,12 +1055,15 @@ function attachRatingListenersToGrid(){
       if(!/^[6-9]\d{9}$/.test(phone)){ alert('Enter a valid 10-digit Indian mobile number'); return; }
       closeModal(orderModal);
       // Redirect to payment page with order details as URL parameters
-    const tempOrder = {
+const imgSrc = card.querySelector('.imgwrap img')?.src || '';
+
+const tempOrder = {
   product,
   name,
   address,
   phone,
   price,
+  image: imgSrc,   // ⭐ ADD THIS
   createdAt: Date.now()
 };
 
