--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@ function attachRatingListenersToGrid(){
 const imgSrc = $('productImageField').value || '';
 
 const tempOrder = {
-  product: title,
+  product: prod,
   price: price,
   image: imgSrc, // ⭐ NOW SAFE
   name,
